--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "alchemy-sdk": "^2.1.0",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
     "express": "^4.18.1"
   }
