--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "alchemy-sdk": "^2.1.0",
     "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "pg": "^8.8.0"
   }
 }
