--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.0.3",
     "ethers": "^5.7.1",
     "express": "^4.18.1",
-    "pg": "^8.8.0"
+    "pg": "^8.8.0",
+    "web3": "^1.8.0"
   }
 }
